<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_start"
            android:layout_marginEnd="@dimen/indent_end"
            android:hint="@string/enter_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="@dimen/text_field_top_padding"
            android:textAlignment="center"
            android:textSize="@dimen/field_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/filter_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_start"
            android:layout_marginTop="@dimen/indent_top"
            android:layout_marginEnd="@dimen/indent_end"
            android:hint="@string/enter_filter"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="@dimen/field_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field" />

        <TextView
            android:id="@+id/anagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_start"
            android:layout_marginTop="@dimen/indent_top"
            android:layout_marginEnd="@dimen/indent_end"
            android:hint="@string/hint_anagram"
            android:textAlignment="center"
            android:textSize="@dimen/field_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>